--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -320,7 +320,7 @@
   "Quote": "Цитата",
   "Image": "Изображение",
   "File attachment": "Прикрепленный файл",
-  "Toggle block": "Переключить блок",
+  "Toggle block": "Спойлер",
   "Callout": "Выноска",
   "Insert callout notice.": "Вставить выноску с сообщением.",
   "Math inline": "Формула в строке",
@@ -334,9 +334,44 @@
   "Draw and sketch excalidraw diagrams": "Создайте и рисуйте диаграммы Excalidraw",
   "Multiple": "Несколько",
   "Heading {{level}}": "Заголовок {{level}}",
-  "Toggle title": "Переключить заголовок",
+  "Toggle title": "Заголовок спойлера",
   "Write anything. Enter \"/\" for commands": "Пишите что угодно. Введите \"/\" для выбора команд",
   "Names do not match": "Названия не совпадают",
   "Today, {{time}}": "Сегодня, {{time}}",
-  "Yesterday, {{time}}": "Вчера, {{time}}"
+  "Yesterday, {{time}}": "Вчера, {{time}}",
+  "Page restored successfully": "Страница успешно восстановлена",
+  "Failed to restore page": "Не удалось восстановить страницу",
+  "Recycle bin": "Корзина",
+  "Recycle Bin": "Корзина",
+  "Delete page permanently": "Удалить страницу навсегда",
+  "Are you sure you want to permanently delete this page?": "Вы уверены, что хотите навсегда удалить эту страницу?",
+  "Restore page" : "Восстановить страницу",
+  "Restore this page?": "Восстановить эту страницу?",
+  "Deleted Pages": "Удаленные Cтраницы",
+  "Restore Page" : "Восстановить Страницу",
+  "Delete Page permanently": "Удалить Страницу навсегда",
+  "No deleted pages": "Нет удаленных страниц",
+  "On this page": "На этой странице",
+  "View headings": "Показывать заголовки",
+  "Real-time editor connection lost. Retrying...": "Соединение с редактором потеряно. Подключение...",
+  "Show article title menu.": "Отображать меню заголовков статьи.",
+  "Toggle view headings menu": "Переключить меню просмотра заголовков",
+  "Editing": "Редактирование",
+  "Reading": "Чтение",
+  "Default page edit mode": "Режим показа страницы по умолчанию",
+  "Choose your preferred page edit mode. Avoid accidental edits." : "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок.",
+  "Not found": "Пусто",
+  "Find": "Поиск",
+  "Find (Ctrl-F)": "Поиск (Ctrl-F)",
+  "Previous Match (Shift+Enter)": "Предыдущее совпадение (Shift+Enter)",
+  "Next Match (Enter)": "Следующее совпадение (Enter)",
+  "Match Case (Alt+C)": "Учитывать регистр (Alt+C)",
+  "Replace": "Замена",
+  "Close (Escape)": "Закрыть (Escape)",
+  "Replace (Enter)": "Заменить (Enter)",
+  "Replace All (Ctrl+Alt+Enter)": "Заменить все (Ctrl+Alt+Enter)",
+  "Replace All": "Заменить все",
+  "Copy invite link": "Скопировать ссылку",
+  "Invite link copied to clipboard!": "Ссылка скопирована!",
+  "Invitation sent": "Приглашение отправлено"
 }
