--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -322,7 +322,7 @@
   "Quote": "Цитата",
   "Image": "Изображение",
   "File attachment": "Прикрепленный файл",
-  "Toggle block": "Сворачиваемый блок",
+  "Toggle block": "Спойлер",
   "Callout": "Выноска",
   "Insert callout notice.": "Вставить выноску с сообщением.",
   "Math inline": "Формула",
@@ -336,7 +336,7 @@
   "Draw and sketch excalidraw diagrams": "Вставить и рисовать диаграммы Excalidraw",
   "Multiple": "Несколько",
   "Heading {{level}}": "Заголовок {{level}}",
-  "Toggle title": "Переключить заголовок",
+  "Toggle title": "Заголовок спойлера",
   "Write anything. Enter \"/\" for commands": "Начните писать. Введите \"/\" для списка команд",
   "Names do not match": "Названия не совпадают",
   "Today, {{time}}": "Сегодня, {{time}}",
@@ -383,5 +383,17 @@
   "Publicly shared pages from spaces you are a member of will appear here": "Общие страницы из пространств, участником которых вы являетесь, появятся здесь",
   "Share deleted successfully": "Общий доступ успешно удален",
   "Share not found": "Общий доступ не найден",
-  "Failed to share page": "Не удалось поделиться страницей"
+  "Failed to share page": "Не удалось поделиться страницей",
+  "Page restored successfully": "Страница успешно восстановлена",
+  "Failed to restore page": "Не удалось восстановить страницу",
+  "Recycle bin": "Корзина",
+  "Recycle Bin": "Корзина",
+  "Delete page permanently": "Удалить страницу навсегда",
+  "Are you sure you want to permanently delete this page?": "Вы уверены, что хотите навсегда удалить эту страницу?",
+  "Restore page" : "Восстановить страницу",
+  "Restore this page?": "Восстановить эту страницу?",
+  "Deleted Pages": "Удаленные cтраницы",
+  "Restore Page" : "Восстановить",
+  "Delete Page permanently": "Удалить навсегда",
+  "No deleted pages": "Нет удаленных страниц"
 }
