fix: replace read/edit via pencil icon

--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -411,5 +411,6 @@
   "Download code": "Download code",
   "Toggle line wrap": "Toggle line wrap",
   "Enable line wrap": "Enable line wrap",
-  "Disable line wrap": "Disable line wrap"
+  "Disable line wrap": "Disable line wrap",
+  "Editing": "Editing"
 }
