--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -405,5 +405,6 @@
   "Add column before": "Add column before",
   "Add column after": "Add column after",
   "Delete column layout": "Delete column layout",
-  "Insert a column layout.": "Insert a column layout."
+  "Insert a column layout.": "Insert a column layout.",
+  "Toggle Color Scheme" : "Toggle Color Scheme"
 }
