--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -414,5 +414,6 @@
   "Add column before": "Добавить столбец слева",
   "Add column after": "Добавить столбец справа",
   "Delete column layout": "Удалить column layout",
-  "Insert a column layout.": "Добавить column layout."
+  "Insert a column layout.": "Добавить column layout.",
+  "Toggle Color Scheme" : "Переключить тему"
 }
