--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -413,5 +413,6 @@
   "Toggle line wrap": "Toggle line wrap",
   "Enable line wrap": "Enable line wrap",
   "Disable line wrap": "Disable line wrap",
-  "Editing": "Editing"
+  "Editing": "Editing",
+  "Toggle Color Scheme" : "Toggle Color Scheme"
 }
