--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -40,7 +40,7 @@
   "Date": "Дата",
   "Delete": "Удалить",
   "Delete group": "Удалить группу",
-  "Are you sure you want to delete this page? This will delete its children and page history. This action is irreversible.": "Вы уверены, что хотите удалить эту страницу? Это удалит её дочерние страницы, а также историю страницы. Это действие необратимо.",
+  "Are you sure you want to delete this page? This will delete its children and page history. This action is irreversible.": "Вы уверены, что хотите удалить эту страницу? Восстановить ее можно из Корзины",
   "Description": "Описание",
   "Details": "Подробности",
   "e.g ACME": "например, ACME",
