feat: Keyboard shortcuts visible

--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -287,11 +287,11 @@
   "Invalid {{provider}} embed link": "Неверная ссылка для встраивания {{provider}}",
   "Embed {{provider}}": "Встроить  {{provider}}",
   "Enter {{provider}} link to embed": "Введите ссылку для встраивания {{provider}}",
-  "Bold": "Жирный",
-  "Italic": "Курсив",
-  "Underline": "Подчёркнутый",
-  "Strike": "Перечёркнутый",
-  "Code": "Код",
+  "Bold": "Жирный (Ctrl+B)",
+  "Italic": "Курсив (Ctrl+I)",
+  "Underline": "Подчёркнутый (Ctrl+U)",
+  "Strike": "Перечёркнутый (Ctrl+Shift+S)",
+  "Code": "Код (Ctrl+E)",
   "Comment": "Комментарий",
   "Text": "Текст",
   "Heading 1": "Заголовок 1",
