feat: Keyboard shortcuts visible

--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -288,11 +288,11 @@
   "Invalid {{provider}} embed link": "Invalid {{provider}} embed link",
   "Embed {{provider}}": "Embed {{provider}}",
   "Enter {{provider}} link to embed": "Enter {{provider}} link to embed",
-  "Bold": "Bold",
-  "Italic": "Italic",
-  "Underline": "Underline",
-  "Strike": "Strike",
-  "Code": "Code",
+  "Bold": "Bold (Ctrl+B)",
+  "Italic": "Italic (Ctrl+I)",
+  "Underline": "Underline (Ctrl+U)",
+  "Strike": "Strike (Ctrl+Shift+S)",
+  "Code": "Code (Ctrl+E)",
   "Comment": "Comment",
   "Text": "Text",
   "Heading 1": "Heading 1",
