--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -398,5 +398,38 @@
   "Deleted Pages": "Удаленные cтраницы",
   "Restore Page" : "Восстановить",
   "Delete Page permanently": "Удалить навсегда",
-  "No deleted pages": "Нет удаленных страниц"
+  "No deleted pages": "Нет удаленных страниц",
+  "Default page edit mode": "Режим показа страницы по умолчанию",
+  "Choose your preferred page edit mode. Avoid accidental edits." : "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок.",
+  "Editing": "Редактирование",
+  "Reading": "Чтение",
+  "Not found": "Пусто",
+  "Find": "Поиск",
+  "Find (Ctrl-F)": "Поиск (Ctrl-F)",
+  "Previous Match (Shift+Enter)": "Предыдущее совпадение (Shift+Enter)",
+  "Next Match (Enter)": "Следующее совпадение (Enter)",
+  "Match Case (Alt+C)": "Учитывать регистр (Alt+C)",
+  "Replace": "Замена",
+  "Close (Escape)": "Закрыть (Escape)",
+  "Replace (Enter)": "Заменить (Enter)",
+  "Replace All (Ctrl+Alt+Enter)": "Заменить все (Ctrl+Alt+Enter)",
+  "Replace All": "Заменить все",
+  "Add column before": "Добавить столбец слева",
+  "Add column after": "Добавить столбец справа",
+  "Delete column layout": "Удалить column layout",
+  "Insert a column layout.": "Добавить column layout.",
+  "Toggle Color Scheme" : "Переключить тему",
+  "Embed URL": "Встроить URL",
+  "Embed Any url": "Встроить любой URL",
+  "Copy invite link": "Скопировать ссылку",
+  "Invite link copied to clipboard!": "Ссылка скопирована!",
+  "Invitation resent": "Приглашене отправвлено повторно",
+  "Invitation revoked": "Приглашение отозвано",
+  "Action": "Действие",
+  "Do you want to deactivate this member?": "Вы хотите удалить этого участника?",
+  "Deactivate member": "Удалить участника",
+  "Permanently delete member": "Окончательно удаленный участник",
+  "Are you sure? This action is <strong>not reversible</strong>": "Вы уверены? Это действие <strong>необратимо</strong>",
+  "Deactivated": "Удаленные",
+  "User deactivated": "Пользователь удален"
 }
