--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -417,5 +417,16 @@
   "Insert a column layout.": "Добавить column layout.",
   "Toggle Color Scheme" : "Переключить тему",
   "Embed URL": "Встроить URL",
-  "Embed Any url": "Встроить любой URL"
+  "Embed Any url": "Встроить любой URL",
+  "Copy invite link": "Скопировать ссылку",
+  "Invite link copied to clipboard!": "Ссылка скопирована!",
+  "Invitation resent": "Приглашене отправвлено повторно",
+  "Invitation revoked": "Приглашение отозвано",
+  "Action": "Действие",
+  "Do you want to deactivate this member?": "Вы хотите удалить этого участника?",
+  "Deactivate member": "Удалить участника",
+  "Permanently delete member": "Окончательно удаленный участник",
+  "Are you sure? This action is <strong>not reversible</strong>": "Вы уверены? Это действие <strong>необратимо</strong>",
+  "Deactivated": "Удаленные",
+  "User deactivated": "Пользователь удален"
 }
