--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -396,14 +396,14 @@
   "Recycle Bin": "Корзина",
   "Delete page permanently": "Удалить страницу навсегда",
   "Are you sure you want to permanently delete this page?": "Вы уверены, что хотите навсегда удалить эту страницу?",
-  "Restore page" : "Восстановить страницу",
+  "Restore page": "Восстановить страницу",
   "Restore this page?": "Восстановить эту страницу?",
   "Deleted Pages": "Удаленные cтраницы",
-  "Restore Page" : "Восстановить",
+  "Restore Page": "Восстановить",
   "Delete Page permanently": "Удалить навсегда",
   "No deleted pages": "Нет удаленных страниц",
   "Default page edit mode": "Режим показа страницы по умолчанию",
-  "Choose your preferred page edit mode. Avoid accidental edits." : "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок.",
+  "Choose your preferred page edit mode. Avoid accidental edits.": "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок.",
   "Editing": "Редактирование",
   "Reading": "Чтение",
   "Not found": "Пусто",
@@ -421,7 +421,7 @@
   "Add column after": "Добавить столбец справа",
   "Delete column layout": "Удалить column layout",
   "Insert a column layout.": "Добавить column layout.",
-  "Toggle Color Scheme" : "Переключить тему",
+  "Toggle Color Scheme": "Переключить тему",
   "Embed URL": "Встроить URL",
   "Embed Any url": "Встроить любой URL",
   "Copy invite link": "Скопировать ссылку",
@@ -445,5 +445,15 @@
   "Download code": "Скачать",
   "Toggle line wrap": "Переключить перенос",
   "Enable line wrap": "Включить перенос",
-  "Disable line wrap": "Выключить перенос"
+  "Disable line wrap": "Выключить перенос",
+  "Security & SSO": "Безопасность & SSO",
+  "Login with ": "Войти c ",
+  "Approved Domains": "Доверенные домены",
+  "If configured, only users with email addresses from these domains will be able to sign in.": "Если настроено, только пользователи с email на этих доменах смогут войти.",
+  "Configure single sign-on settings.": "Конфигурация SSO",
+  "Automatically create users from approved domains (JIT)": "Автоматически создавать пользователей с подтвержденных доменов (JIT)",
+  "Configuration updated successfully": "Конфигурация успешно обновлена",
+  "Failed updating configuration": "Не удалось обновить конфигурациюы",
+  "Domains updated successfully": "Домены успешно обновлены",
+  "Failed updating domains": "Не удалось обновить домены"
 }
