--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -433,5 +433,7 @@
   "Deactivated": "Удаленные",
   "User deactivated": "Пользователь удален",
   "Highlight text color": "Подсветить",
-  "Set": "Задать"
+  "Set": "Задать",
+  "Float left": "Плавающий слева",
+  "Float right": "Плавающий справа"
 }
