--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -403,5 +403,8 @@
   "Add column before": "Add column before",
   "Add column after": "Add column after",
   "Delete column layout": "Delete column layout",
-  "Insert a column layout.": "Insert a column layout."
+  "Insert a column layout.": "Insert a column layout.",
+  "Spellcheck": "Spellcheck",
+  "Choose if spellcheck is enabled.": "Choose if spellcheck is enabled.",
+  "Toggle spellcheck": "Toggle spellcheck"
 }
