--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -222,6 +222,7 @@
   "Anyone with this link can join this workspace.": "Любой, у кого есть данная ссылка, может присоединиться к этой рабочей области.",
   "Invite link": "Ссылка для приглашения",
   "Copy": "Копировать",
+  "Copy anchor link": "Копировать ссылку",
   "Copied": "Скопировано",
   "Select a user": "Выберите пользователя",
   "Select a group": "Выберите группу",
