--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -357,7 +357,7 @@
   "{{latestVersion}} is available": "{{latestVersion}} is available",
   "Default page edit mode": "Default page edit mode",
   "Choose your preferred page edit mode. Avoid accidental edits.": "Choose your preferred page edit mode. Avoid accidental edits.",
-  "Reading": "Reading"
+  "Reading": "Reading",
   "Delete member": "Delete member",
   "Member deleted successfully": "Member deleted successfully",
   "Are you sure you want to delete this workspace member? This action is irreversible.": "Are you sure you want to delete this workspace member? This action is irreversible.",
@@ -407,5 +407,9 @@
   "Insert a column layout.": "Insert a column layout.",
   "Spellcheck": "Spellcheck",
   "Choose if spellcheck is enabled.": "Choose if spellcheck is enabled.",
-  "Toggle spellcheck": "Toggle spellcheck"
+  "Toggle spellcheck": "Toggle spellcheck",
+  "Download code": "Download code",
+  "Toggle line wrap": "Toggle line wrap",
+  "Enable line wrap": "Enable line wrap",
+  "Disable line wrap": "Disable line wrap"
 }
