16fm - Add audio upload and playback support to editor

--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -314,11 +314,13 @@
   "Insert horizontal rule divider": "Вставить горизонтальный разделитель",
   "Upload any image from your device.": "Загрузить любое изображение с вашего устройства.",
   "Upload any video from your device.": "Загрузить любое видео с вашего устройства.",
+  "Upload any audio from your device.": "Загрузить любое аудио с вашего устройства.",
   "Upload any file from your device.": "Загрузить любой файл с вашего устройства.",
   "Table": "Таблица",
   "Insert a table.": "Вставить таблицу.",
   "Insert collapsible block.": "Вставить сворачиваемый блок.",
   "Video": "Видео",
+  "Audio": "Аудио",
   "Divider": "Разделитель",
   "Quote": "Цитата",
   "Image": "Изображение",
