fix: search icon

--- a/apps/client/public/locales/en-US/translation.json
+++ b/apps/client/public/locales/en-US/translation.json
@@ -396,6 +396,7 @@
   "Previous Match (Shift+Enter)": "Previous Match (Shift+Enter)",
   "Next match (Enter)": "Next match (Enter)",
   "Match case (Alt+C)": "Match case (Alt+C)",
+  "Find (Ctrl-F)": "Find (Ctrl-F)",
   "Replace": "Replace",
   "Close (Escape)": "Close (Escape)",
   "Replace (Enter)": "Replace (Enter)",
