--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -409,14 +409,14 @@
   "Not found": "Пусто",
   "Find": "Поиск",
   "Find (Ctrl-F)": "Поиск (Ctrl-F)",
-  "Previous Match (Shift+Enter)": "Предыдущее совпадение (Shift+Enter)",
-  "Next Match (Enter)": "Следующее совпадение (Enter)",
-  "Match Case (Alt+C)": "Учитывать регистр (Alt+C)",
+  "Previous match (Shift+Enter)": "Предыдущее совпадение (Shift+Enter)",
+  "Next match (Enter)": "Следующее совпадение (Enter)",
+  "Match case (Alt+C)": "Учитывать регистр (Alt+C)",
   "Replace": "Замена",
   "Close (Escape)": "Закрыть (Escape)",
   "Replace (Enter)": "Заменить (Enter)",
-  "Replace All (Ctrl+Alt+Enter)": "Заменить все (Ctrl+Alt+Enter)",
-  "Replace All": "Заменить все",
+  "Replace all (Ctrl+Alt+Enter)": "Заменить все (Ctrl+Alt+Enter)",
+  "Replace all": "Заменить все",
   "Add column before": "Добавить столбец слева",
   "Add column after": "Добавить столбец справа",
   "Delete column layout": "Удалить column layout",
