--- a/apps/client/public/locales/ru-RU/translation.json
+++ b/apps/client/public/locales/ru-RU/translation.json
@@ -8,26 +8,26 @@
   "Add to groups": "Добавить в группы",
   "Add space members": "Добавить участников пространства",
   "Admin": "Администратор",
-  "Are you sure you want to delete this group? Members will lose access to resources this group has access to.": "Вы уверены, что хотите удалить эту группу? Участники потеряют доступ к материалам, к которым у этой группы есть доступ.",
+  "Are you sure you want to delete this group? Members will lose access to resources this group has access to.": "Вы уверены, что хотите удалить эту группу? Участники потеряют доступ к материалам, к которым у этой группы есть доступ",
   "Are you sure you want to delete this page?": "Вы уверены, что хотите удалить эту страницу?",
-  "Are you sure you want to remove this user from the group? The user will lose access to resources this group has access to.": "Вы уверены, что хотите удалить этого пользователя из группы? Пользователь потеряет доступ к материалам, к которым у этой группы есть доступ.",
-  "Are you sure you want to remove this user from the space? The user will lose all access to this space.": "Вы уверены, что хотите удалить этого пользователя из пространства? Пользователь потеряет весь доступ к этому пространству.",
-  "Are you sure you want to restore this version? Any changes not versioned will be lost.": "Вы уверены, что хотите восстановить эту версию? Все не зафиксированные изменения будут потеряны.",
+  "Are you sure you want to remove this user from the group? The user will lose access to resources this group has access to.": "Вы уверены, что хотите удалить этого пользователя из группы? Пользователь потеряет доступ к материалам, к которым у этой группы есть доступ",
+  "Are you sure you want to remove this user from the space? The user will lose all access to this space.": "Вы уверены, что хотите удалить этого пользователя из пространства? Пользователь потеряет весь доступ к этому пространству",
+  "Are you sure you want to restore this version? Any changes not versioned will be lost.": "Вы уверены, что хотите восстановить эту версию? Все не зафиксированные изменения будут потеряны",
   "Can become members of groups and spaces in workspace": "Могут становиться участниками групп и пространств в рабочей области",
-  "Can create and edit pages in space.": "Может создавать и редактировать страницы в пространстве.",
+  "Can create and edit pages in space.": "Может создавать и редактировать страницы в пространстве",
   "Can edit": "Может изменять",
   "Can manage workspace": "Может управлять рабочей областью",
   "Can manage workspace but cannot delete it": "Может управлять рабочей областью, но не может ее удалить",
   "Can view": "Может просматривать",
-  "Can view pages in space but not edit.": "Может просматривать страницы в пространстве, но не может их редактировать.",
+  "Can view pages in space but not edit.": "Может просматривать страницы в пространстве, но не может их редактировать",
   "Cancel": "Отменить",
   "Change email": "Изменить электронную почту",
   "Change password": "Изменить пароль",
   "Change photo": "Изменить фото",
   "Choose a role": "Выберите роль",
-  "Choose your preferred color scheme.": "Выберите предпочитаемую цветовую схему.",
-  "Choose your preferred interface language.": "Выберите предпочитаемый язык интерфейса.",
-  "Choose your preferred page width.": "Выберите предпочитаемую ширину страницы.",
+  "Choose your preferred color scheme.": "Выберите предпочитаемую цветовую схему",
+  "Choose your preferred interface language.": "Выберите предпочитаемый язык интерфейса",
+  "Choose your preferred page width.": "Выберите предпочитаемую ширину страницы",
   "Confirm": "Подтвердить",
   "Copy link": "Копировать ссылку",
   "Create": "Создать",
@@ -70,7 +70,7 @@
   "Failed to delete page": "Не удалось удалить страницу",
   "Failed to fetch recent pages": "Не удалось получить недавние страницы",
   "Failed to import pages": "Не удалось импортировать страницы",
-  "Failed to load page. An error occurred.": "Не удалось загрузить страницу. Произошла ошибка.",
+  "Failed to load page. An error occurred.": "Произошла ошибка. Не удалось загрузить страницу",
   "Failed to update data": "Не удалось обновить данные",
   "Full access": "Полный доступ",
   "Full page width": "Ширина на всю страницу",
@@ -80,7 +80,7 @@
   "Group description": "Описание группы",
   "Group name": "Название группы",
   "Groups": "Группы",
-  "Has full access to space settings and pages.": "Имеет полный доступ к настройкам пространства и страницам.",
+  "Has full access to space settings and pages.": "Имеет полный доступ к настройкам пространства и страницам",
   "Home": "Главная",
   "Import pages": "Импорт страниц",
   "Import pages & space settings": "Импорт страниц и настройки пространства",
@@ -90,7 +90,7 @@
   "Invite by email": "Пригласить по электронной почте",
   "Invite members": "Пригласить участников",
   "Invite new members": "Пригласить новых участников",
-  "Invited members who are yet to accept their invitation will appear here.": "Приглашённые участники, которые ещё не приняли приглашение, появятся здесь.",
+  "Invited members who are yet to accept their invitation will appear here.": "Приглашённые участники, которые ещё не приняли приглашение, появятся здесь",
   "Invited members will be granted access to spaces the groups can access": "Приглашённые участники получат доступ к пространствам, доступ к которым есть у группы",
   "Join the workspace": "Присоединиться к рабочей области",
   "Language": "Язык",
@@ -112,7 +112,7 @@
   "New page": "Новая страница",
   "New password": "Новый пароль",
   "No group found": "Группа не найдена",
-  "No page history saved yet.": "История страниц ещё не сохранена.",
+  "No page history saved yet.": "История страниц ещё не сохранена",
   "No pages yet": "Страниц пока нет",
   "No results found...": "Результаты не найдены...",
   "No user found": "Пользователь не найден",
@@ -121,7 +121,7 @@
   "page": "страница",
   "Page deleted successfully": "Страница успешно удалена",
   "Page history": "История страницы",
-  "Page import is in progress. Please do not close this tab.": "Импорт страницы в процессе. Пожалуйста, не закрывайте эту вкладку.",
+  "Page import is in progress. Please do not close this tab.": "Импорт страницы в процессе. Пожалуйста, не закрывайте эту вкладку",
   "Pages": "Страницы",
   "pages": "страницы",
   "Password": "Пароль",
@@ -170,9 +170,9 @@
   "Successfully restored": "Успешно восстановлено",
   "System settings": "Системные настройки",
   "Theme": "Тема",
-  "To change your email, you have to enter your password and new email.": "Чтобы изменить электронную почту, вам нужно ввести пароль и новый адрес.",
+  "To change your email, you have to enter your password and new email.": "Чтобы изменить электронную почту, вам нужно ввести пароль и новый адрес",
   "Toggle full page width": "Переключить ширину на всю страницу",
-  "Unable to import pages. Please try again.": "Не удалось импортировать страницы. Пожалуйста, попробуйте ещё раз.",
+  "Unable to import pages. Please try again.": "Не удалось импортировать страницы. Пожалуйста, попробуйте ещё раз",
   "untitled": "без названия",
   "Untitled": "Без названия",
   "Updated successfully": "Обновлено успешно",
@@ -180,28 +180,28 @@
   "Workspace": "Рабочая область",
   "Workspace Name": "Имя рабочей области",
   "Workspace settings": "Настройки рабочей области",
-  "You can change your password here.": "Вы можете изменить свой пароль здесь.",
+  "You can change your password here.": "Вы можете изменить свой пароль здесь",
   "Your Email": "Ваш адрес электронной почты",
-  "Your import is complete.": "Ваш импорт завершен.",
+  "Your import is complete.": "Ваш импорт завершен",
   "Your name": "Ваше имя",
   "Your Name": "Ваше Имя",
   "Your password": "Ваш пароль",
-  "Your password must be a minimum of 8 characters.": "Ваш пароль должен содержать минимум 8 символов.",
+  "Your password must be a minimum of 8 characters.": "Ваш пароль должен содержать минимум 8 символов",
   "Sidebar toggle": "Переключить боковую панель",
   "Comments": "Комментарии",
   "404 page not found": "404 страница не найдена",
-  "Sorry, we can't find the page you are looking for.": "К сожалению, мы не можем найти страницу, которую вы ищете.",
+  "Sorry, we can't find the page you are looking for.": "К сожалению, мы не можем найти страницу, которую вы ищете",
   "Take me back to homepage": "Вернуться на главную страницу",
   "Forgot password": "Забыли пароль",
   "Forgot your password?": "Забыли пароль?",
-  "A password reset link has been sent to your email. Please check your inbox.": "Ссылка для сброса пароля была отправлена на ваш электронный адрес. Пожалуйста, проверьте входящие сообщения.",
+  "A password reset link has been sent to your email. Please check your inbox.": "Ссылка для сброса пароля была отправлена на ваш электронный адрес. Пожалуйста, проверьте входящие сообщения",
   "Send reset link": "Отправить ссылку для сброса",
   "Password reset": "Сброс пароля",
   "Your new password": "Ваш новый пароль",
   "Set password": "Установить пароль",
   "Write a comment": "Написать комментарий",
   "Reply...": "Ответить...",
-  "Error loading comments.": "Ошибка при загрузке комментариев.",
+  "Error loading comments.": "Ошибка при загрузке комментариев",
   "No comments yet.": "Комментариев пока нет.",
   "Edit comment": "Редактировать комментарий",
   "Delete comment": "Удалить комментарий",
@@ -217,22 +217,22 @@
   "Revoke invitation": "Отозвать приглашение",
   "Revoke": "Отозвать",
   "Don't": "Нет",
-  "Are you sure you want to revoke this invitation? The user will not be able to join the workspace.": "Вы уверены, что хотите отозвать это приглашение? Пользователь не сможет присоединиться к рабочей области.",
+  "Are you sure you want to revoke this invitation? The user will not be able to join the workspace.": "Вы уверены, что хотите отозвать это приглашение? Пользователь не сможет присоединиться к рабочей области",
   "Resend invitation": "Отправить приглашение повторно",
-  "Anyone with this link can join this workspace.": "Любой, у кого есть данная ссылка, может присоединиться к этой рабочей области.",
+  "Anyone with this link can join this workspace.": "Любой, у кого есть данная ссылка, может присоединиться к этой рабочей области",
   "Invite link": "Ссылка для приглашения",
   "Copy": "Копировать",
   "Copy anchor link": "Копировать ссылку",
   "Copied": "Скопировано",
   "Select a user": "Выберите пользователя",
   "Select a group": "Выберите группу",
-  "Export all pages and attachments in this space.": "Экспортировать все страницы и вложения в этом пространстве.",
+  "Export all pages and attachments in this space.": "Экспортировать все страницы и вложения в этом пространстве",
   "Delete space": "Удалить пространство",
   "Are you sure you want to delete this space?": "Вы уверены, что хотите удалить это пространство?",
-  "Delete this space with all its pages and data.": "Удалить это пространство со всеми его страницами и данными.",
-  "All pages, comments, attachments and permissions in this space will be deleted irreversibly.": "Все страницы, комментарии, вложения и разрешения в этом пространстве будут удалены безвозвратно.",
+  "Delete this space with all its pages and data.": "Удалить это пространство со всеми его страницами и данными",
+  "All pages, comments, attachments and permissions in this space will be deleted irreversibly.": "Все страницы, комментарии, вложения и разрешения в этом пространстве будут удалены безвозвратно",
   "Confirm space name": "Подтвердите название пространства",
-  "Type the space name <b>{{spaceName}}</b> to confirm your action.": "Введите название пространства <b>{{spaceName}}</b>, чтобы подтвердить ваше действие.",
+  "Type the space name <b>{{spaceName}}</b> to confirm your action.": "Введите название пространства <b>{{spaceName}}</b>, чтобы подтвердить ваше действие",
   "Format": "Формат",
   "Include subpages": "Включить вложенные страницы",
   "Include attachments": "Включить вложения",
@@ -286,7 +286,7 @@
   "Gray": "Серый",
   "Embed link": "Встроенная ссылка",
   "Invalid {{provider}} embed link": "Неверная ссылка для встраивания {{provider}}",
-  "Embed {{provider}}": "Встроить  {{provider}}",
+  "Embed {{provider}}": "Встроить {{provider}}",
   "Enter {{provider}} link to embed": "Введите ссылку для встраивания {{provider}}",
   "Bold": "Жирный (Ctrl+B)",
   "Italic": "Курсив (Ctrl+I)",
@@ -302,23 +302,23 @@
   "Bullet List": "Маркированный список",
   "Numbered List": "Нумерованный список",
   "Blockquote": "Блок цитирования",
-  "Just start typing with plain text.": "Просто начните печатать обычный текст.",
-  "Track tasks with a to-do list.": "Отследить задачи с помощью списка дел.",
-  "Big section heading.": "Большой заголовок раздела.",
-  "Medium section heading.": "Средний заголовок раздела.",
-  "Small section heading.": "Маленький заголовок раздела.",
-  "Create a simple bullet list.": "Создать простой маркированный список.",
-  "Create a list with numbering.": "Создать нумерованный список.",
-  "Create block quote.": "Создать блок цитирования.",
-  "Insert code snippet.": "Вставить фрагмент кода.",
+  "Just start typing with plain text.": "Начните печатать обычный текст",
+  "Track tasks with a to-do list.": "Отследить задачи с помощью чеклиста",
+  "Big section heading.": "Большой заголовок раздела",
+  "Medium section heading.": "Средний заголовок раздела",
+  "Small section heading.": "Маленький заголовок раздела",
+  "Create a simple bullet list.": "Создать маркированный список",
+  "Create a list with numbering.": "Создать нумерованный список",
+  "Create block quote.": "Создать блок цитирования",
+  "Insert code snippet.": "Вставить фрагмент кода",
   "Insert horizontal rule divider": "Вставить горизонтальный разделитель",
-  "Upload any image from your device.": "Загрузить любое изображение с вашего устройства.",
-  "Upload any video from your device.": "Загрузить любое видео с вашего устройства.",
-  "Upload any audio from your device.": "Загрузить любое аудио с вашего устройства.",
-  "Upload any file from your device.": "Загрузить любой файл с вашего устройства.",
+  "Upload any image from your device.": "Загрузить изображение с устройства",
+  "Upload any video from your device.": "Загрузить видео с устройства",
+  "Upload any audio from your device.": "Загрузить аудио с устройства",
+  "Upload any file from your device.": "Загрузить файл с устройства",
   "Table": "Таблица",
-  "Insert a table.": "Вставить таблицу.",
-  "Insert collapsible block.": "Вставить сворачиваемый блок.",
+  "Insert a table.": "Вставить таблицу",
+  "Insert collapsible block.": "Вставить сворачиваемый блок",
   "Video": "Видео",
   "Audio": "Аудио",
   "Divider": "Разделитель",
@@ -327,9 +327,9 @@
   "File attachment": "Прикрепленный файл",
   "Toggle block": "Спойлер",
   "Callout": "Выноска",
-  "Insert callout notice.": "Вставить выноску с сообщением.",
+  "Insert callout notice.": "Вставить выноску с сообщением",
   "Math inline": "Формула",
-  "Insert inline math equation.": "Вставить математическое выражение в строку.",
+  "Insert inline math equation.": "Вставить математическое выражение в строку",
   "Math block": "Блок формул",
   "Insert math equation": "Вставить математическое выражение",
   "Mermaid diagram": "Диаграмма Mermaid",
@@ -359,13 +359,13 @@
   "{{latestVersion}} is available": "Доступна новая версия {{latestVersion}}",
   "Delete member": "Удалить участника",
   "Member deleted successfully": "Участник успешно удален",
-  "Are you sure you want to delete this workspace member? This action is irreversible.": "Вы уверены, что хотите удалить этого участника рабочей области? Это действие необратимо.",
+  "Are you sure you want to delete this workspace member? This action is irreversible.": "Вы уверены, что хотите удалить этого участника рабочей области? Это действие необратимо",
   "Move": "Переместить",
   "Move page": "Переместить страницу",
-  "Move page to a different space.": "Переместите страницу в другое пространство.",
+  "Move page to a different space.": "Переместите страницу в другое пространство",
   "Real-time editor connection lost. Retrying...": "Соединение с редактором потеряно. Подключение...",
   "Table of contents": "Содержание",
-  "Add headings (H1, H2, H3) to generate a table of contents.": "Добавьте заголовки (H1, H2, H3), чтобы создать оглавление.",
+  "Add headings (H1, H2, H3) to generate a table of contents.": "Добавьте заголовки (H1, H2, H3), чтобы создать оглавление",
   "Share": "Поделиться",
   "Public sharing": "Общий доступ",
   "Shared by": "Поделился",
@@ -388,7 +388,7 @@
   "Share not found": "Общий доступ не найден",
   "Failed to share page": "Не удалось поделиться страницей",
   "Copy page": "Копировать страницу",
-  "Copy page to a different space.": "Копировать страницу в другое пространство.",
+  "Copy page to a different space.": "Копировать страницу в другое пространство",
   "Page copied successfully": "Страница успешно скопирована",
   "Page restored successfully": "Страница успешно восстановлена",
   "Failed to restore page": "Не удалось восстановить страницу",
@@ -403,7 +403,7 @@
   "Delete Page permanently": "Удалить навсегда",
   "No deleted pages": "Нет удаленных страниц",
   "Default page edit mode": "Режим показа страницы по умолчанию",
-  "Choose your preferred page edit mode. Avoid accidental edits.": "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок.",
+  "Choose your preferred page edit mode. Avoid accidental edits.": "Выберите предпочитаемый режим показа страницы. Избегайте случайных правок",
   "Editing": "Редактирование",
   "Reading": "Чтение",
   "Not found": "Пусто",
@@ -420,7 +420,7 @@
   "Add column before": "Добавить столбец слева",
   "Add column after": "Добавить столбец справа",
   "Delete column layout": "Удалить column layout",
-  "Insert a column layout.": "Добавить column layout.",
+  "Insert a column layout.": "Добавить column layout",
   "Toggle Color Scheme": "Переключить тему",
   "Embed URL": "Встроить URL",
   "Embed Any url": "Встроить любой URL",
@@ -440,7 +440,7 @@
   "Float left": "Плавающий слева",
   "Float right": "Плавающий справа",
   "Spellcheck": "Правописание",
-  "Choose if spellcheck is enabled.": "Выберите для включения проверки правописания.",
+  "Choose if spellcheck is enabled.": "Выберите для включения проверки правописания",
   "Toggle spellcheck": "Переключить проверку правописания",
   "Download code": "Скачать",
   "Toggle line wrap": "Переключить перенос",
@@ -449,11 +449,16 @@
   "Security & SSO": "Безопасность & SSO",
   "Login with ": "Войти c ",
   "Approved Domains": "Доверенные домены",
-  "If configured, only users with email addresses from these domains will be able to sign in.": "Если настроено, только пользователи с email на этих доменах смогут войти.",
+  "If configured, only users with email addresses from these domains will be able to sign in.": "Если настроено, только пользователи с email на этих доменах смогут войти",
   "Configure single sign-on settings.": "Конфигурация SSO",
   "Automatically create users from approved domains (JIT)": "Автоматически создавать пользователей с подтвержденных доменов (JIT)",
   "Configuration updated successfully": "Конфигурация успешно обновлена",
   "Failed updating configuration": "Не удалось обновить конфигурациюы",
   "Domains updated successfully": "Домены успешно обновлены",
-  "Failed updating domains": "Не удалось обновить домены"
+  "Failed updating domains": "Не удалось обновить домены",
+  "Bullet list": "Список мар-ов",
+  "Numbered list": "Список чисел",
+  "To-do list": "Список дел",
+  "Toggle header row": "Переключить строку заголовка",
+  "Toggle header column": "Переключить столбец заголовка"
 }
